This is not a supported release version of Onload
=================================================

SDCI placeholder - add more details here when we decide whether we advertise
the inclusion of SDCI here.

Max TXQs placeholder - Express datapath maximum number of TX queues is limited
to 128.

Onload-9.0.1.86
===============

 This is an update release of Onload to fix various bugs in
 OpenOnload-9.0.0.39, add a new version of the sfc net driver,
 simplify packaging, and update the supported operating system list.

 Please see the ChangeLog for a full list of changes.


Linux distribution support
--------------------------

 This package can be installed on:
 - Red Hat Enterprise Linux 8.6 - 8.10
 - Red Hat Enterprise Linux 9.2 - 9.5
 - Canonical Ubuntu Server LTS 22.04 and 24.04
 - Debian 12 "Bookworm"
 - Linux kernels 5.11 - 6.12


Additional packaging options
----------------------------

 - Akmods RPM sub-package as alternative to DKMS

   Red Hat Akmods is a system which, like DKMS, builds kernel modules
   on-demand. Unlike DKMS, it is integrated into the Red Hat ecosystem.
   It uses `rpmbuild` to build `onload-kmod-$(uname -r)` RPMs which it installs
   with `yum`/`dnf`. It will only build for kernel versions which are missing
   the `/lib/modules/*/extra/onload/` (package name) directory. As with the
   `dkms` RPM, the `akmods` RPM is available in EPEL. To use:

        rpmbuild -tb --without kmod --without dkms onload-*.tgz
        yum install -y onload-user onload-akmod
        /usr/sbin/akmods # Optionally, build immediately

 - Optional sub-packages

   When building RPM or DEB packages, all sub-packages are built by default.
   It is now possible to choose outputs. For example, to build only userland
   and DKMS sub-packages:

        rpmbuild -tb --without kmod --without akmod onload-*.tgz # RPM
        debuild -i -uc -us --build-profiles=pkg.onload.nosource # DEB


Notice of future change to DKMS RPM
-----------------------------------
